--- a/QRcode/packages.config
+++ b/QRcode/packages.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AForge" version="2.2.5" targetFramework="net472" />
   <package id="MaterialDesignColors" version="2.0.1" targetFramework="net472" />
   <package id="MaterialDesignThemes" version="4.1.0" targetFramework="net472" />
-  <package id="MessagingToolkit.QRCode" version="1.3.0" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
+  <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="net472" />
   <package id="WPFMediaKit" version="2.2.0" targetFramework="net472" />
   <package id="ZXing.Net" version="0.16.6" targetFramework="net472" />
 </packages>
