--- a/QRcode/packages.config
+++ b/QRcode/packages.config
@@ -4,6 +4,7 @@
   <package id="MaterialDesignThemes" version="4.1.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="net472" />
+  <package id="ThoughtWorks.QRCode" version="1.1.0" targetFramework="net472" />
   <package id="WPFMediaKit" version="2.2.0" targetFramework="net472" />
   <package id="ZXing.Net" version="0.16.6" targetFramework="net472" />
 </packages>
